# octodns

./: .ci-config.json  .coveragerc  .git-blame-ignore-revs  .git_hooks_pre-commit  .gitignore  .mypy.ini  .readthedocs.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  MakeFile  README.md  TESTCI.md  doit.txt  pyproject.toml  pytest.ini  rb.txt  requirements-dev.txt  requirements-docs.txt  requirements-py3.txt  requirements.txt  setup.cfg  setup.py
.claude/: settings.local.json
.claude/docs/: files.json  folders.json  general_index.md
.codex/docs/: files.json  folders.json  general_index.md  get_context.py
.codex/rules/: default.rules
.dependabot/: config.yml
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: changelog.yml  docs.yml  geo-data.yml  main.yml  modules.yml  slash_commands.yml  stale.yml
docs/: api.rst  auto_arpa.md  conf.py  configuration.rst  dynamic_records.md  dynamic_records.rst  dynamic_zone_config.rst  geo_records.md  get_docs.py  getting-started.rst  include_directive.rst  index.md  index.rst  processors.md  records.md  zone_lifecycle.rst
docs/api/: cmds.rst  helpers.rst  manager.rst  processors.rst  provider.rst  providers.rst  records.rst  secrets.rst  source.rst  sources.rst  validators.rst  zone.rst
docs/examples/: README.rst  docker-compose.yml  env.sh
docs/infos/: changelog.md  license.md
docs/modules/: octodns.context.rst  octodns.deprecation.rst  octodns.equality.rst  octodns.idna.rst  octodns.manager.rst  octodns.yaml.rst  octodns.zone.rst
docs/pages/: auto_arpa.md  dynamic_records.md  geo_records.md  migrating.md  quick-start.md  records.md
docs/source/: api.rst  configuration.rst  getting-started.rst  index.rst  records.md  records.rst
examples/: README.md  docker-compose.yml
examples/basic/: README.md  requirements.txt
examples/migrating-to-octodns/: README.md  requirements.txt
octodns/: __init__.py  auto_arpa.py  compat.py  context.py  deprecation.py  equality.py  idna.py  manager.py  record.py  yaml.py  zone.py
octodns/cmds/: args.py  compare.py  dump.py  report.py  schema.py  sync.py  validate.py  versions.py
octodns/processor/: __init__.py  acme.py  arpa.py  awsacm.py  base.py  clamp.py  filter.py  filters.py  meta.py  ownership.py  restrict.py  spf.py  subzone.py  templating.py  trailing_dots.py  zone.py
octodns/processors/: __init__.py  filters.py  ownership.py
octodns/provider/: __init__.py  azuredns.py  base.py  cloudflare.py  constellix.py  delete.py  digitalocean.py  dnsimple.py  dnsmadeeasy.py  dyn.py  easydns.py  edgedns.py  etc_hosts.py  fastdns.py  gandi.py  gcore.py  googlecloud.py  hetzner.py  lexicon.py  mythicbeasts.py  ns1.py  nsone.py  ovh.py  plan.py  powerdns.py  rackspace.py  route53.py  selectel.py  transip.py  ultra.py  yaml.py
octodns/record/: __init__.py  a.py  aaaa.py  alias.py  base.py  caa.py  change.py  chunked.py  cname.py  dname.py  ds.py  dynamic.py  exception.py  geo.py  geo_data.py  https.py  ip.py  ipaddress.py  loc.py  mx.py  naptr.py  ns.py  openpgpkey.py  ptr.py  rr.py  soa.py  spf.py  srv.py  sshfp.py  subnet.py  svcb.py  target.py  tlsa.py  txt.py  uri.py  urlfwd.py  validator.py
octodns/schema/: __init__.py  config.py  zone.py
octodns/secret/: base.py  environ.py  exception.py
octodns/source/: axfr.py  base.py  envvar.py  networkinterface.py  tinydns.py
octodns/zone/: __init__.py  base.py  caa.py  cname.py  cname_loops.py  dname.py  exception.py  mail.py  ns.py  srv.py  subzone.py  ttl.py  validator.py
script/: bootstrap  build-docs  changelog  cibuild  cibuild-matrix  cibuild-module  cibuild-package  cibuild-setup-py  common.sh  coverage  coverage-report  format  generate-docs  generate-geo-data  get-docs  lint  markdown-toc  release  sdist  test  test-module  typecheck  update-python-versions  update-requirements
tests/: helpers.py  test_octodns_auto_arpa.py  test_octodns_cmds_validate.py  test_octodns_config_schema.py  test_octodns_equality.py  test_octodns_idna.py  test_octodns_manager.py  test_octodns_plan.py  test_octodns_processor.py  test_octodns_processor_acme.py  test_octodns_processor_arpa.py  test_octodns_processor_awsacm.py  test_octodns_processor_clamp.py  test_octodns_processor_filter.py  test_octodns_processor_meta.py  test_octodns_processor_ownership.py  test_octodns_processor_restrict.py  test_octodns_processor_spf.py  test_octodns_processor_subzone.py  test_octodns_processor_templating.py  test_octodns_processor_trailing_dots.py  test_octodns_processor_zone.py  test_octodns_provider_azuredns.py  test_octodns_provider_base.py  test_octodns_provider_cloudflare.py  test_octodns_provider_cloudflare_no_email.py  test_octodns_provider_constellix.py  test_octodns_provider_digitalocean.py  test_octodns_provider_dnsimple.py  test_octodns_provider_dnsmadeeasy.py  test_octodns_provider_dyn.py  test_octodns_provider_easydns.py  test_octodns_provider_edgedns.py  test_octodns_provider_etc_hosts.py  test_octodns_provider_fastdns.py  test_octodns_provider_gandi.py  test_octodns_provider_gcore.py  test_octodns_provider_googlecloud.py  test_octodns_provider_hetzner.py  test_octodns_provider_lexicon.py  (+61 more)
tests/config/: 3.2.2.in-addr.arpa.yaml  alias-zone-loop.yaml  always-dry-run.yaml  auto-arpa.yaml  bad-plan-output-config.yaml  bad-plan-output-missing-class.yaml  bad-provider-class-module.yaml  bad-provider-class-no-module.yaml  bad-provider-class.yaml  bad-zone-aliases.yaml  dump-processors.yaml  dynamic-alias-missing-sources.yaml  dynamic-alias.yaml  dynamic-arpa-no-normal-source.yaml  dynamic-arpa.yaml  dynamic-config-no-list-zones.yaml  dynamic-config.yaml  dynamic-eligible-sources-filtering.yaml  dynamic-no-sources-no-alias.yaml  dynamic.tests.yaml  missing-provider-class.yaml  missing-provider-config.yaml  missing-provider-env.yaml  missing-sources.yaml  missing-zone-config.yaml  no-dump.yaml  plan-output-filehandle.yaml  (+62 more)
tests/config-semis/: escaped.semis.yaml  unescaped.semis.yaml
tests/config-txt-none/: all.null.yaml  list.with.nulls.yaml  scalar.null.yaml
(+186 files in other folders)
