[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "octodns"
description = "OctoDNS: DNS as code - Tools for managing DNS across multiple providers"
authors = [{name = "Ross McFarland", email = "rwmcfa1@gmail.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dynamic = ["version"]
keywords = ["dns", "octodns", "dns-as-code"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "PyYaml>=4.2b1",
    "dnspython>=2.2.1",
    "fqdn>=1.5.0",
    "idna>=3.3",
    "natsort>=5.5.0",
    "python-dateutil>=2.8.1",
]

[project.urls]
Homepage = "https://octodns.github.io/octodns/"
Documentation = "https://octodns.readthedocs.io/"
Source = "https://github.com/octodns/octodns"
Issues = "https://github.com/octodns/octodns/issues"

[project.scripts]
octodns-compare = "octodns.cmds.compare:main"
octodns-dump = "octodns.cmds.dump:main"
octodns-report = "octodns.cmds.report:main"
octodns-schema = "octodns.cmds.schema:main"
octodns-sync = "octodns.cmds.sync:main"
octodns-validate = "octodns.cmds.validate:main"
octodns-versions = "octodns.cmds.versions:main"

[project.optional-dependencies]
test = [
    "jsonschema>=4.0.0",
    "pytest>=6.2.5",
    "pytest-cov>=3.0.0",
    "pytest-network>=0.0.1",
]
dev = [
    "jsonschema>=4.0.0",
    "pytest>=6.2.5",
    "pytest-cov>=3.0.0",
    "pytest-network>=0.0.1",
    # we need to manually/explicitely bump major versions as they're
    # likely to result in formatting changes that should happen in their
    # own PR. This will basically happen yearly
    # https://black.readthedocs.io/en/stable/the_black_code_style/index.html#stability-policy
    "black>=26.0.0,<27.0.0",
    "build>=0.7.0",
    "changelet",
    "isort>=5.11.5",
    "proviso",
    "pycountry>=19.8.18",
    "pycountry-convert>=0.7.2",
    "pyflakes>=2.2.0",
    "readme_renderer[md]>=26.0",
    "twine>=3.4.2",
]
docs = [
    "myst-parser>=4.0.1",
    "Sphinx>=8.1.0",
    "sphinxcontrib-mermaid>=1.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx_rtd_theme",
]

[tool.setuptools.dynamic]
version = {attr = "octodns.__version__"}

[tool.setuptools.packages.find]
include = ["octodns*"]

[tool.black]
line-length=80
skip-string-normalization=true
skip-magic-trailing-comma=true
target-version=["py310", "py311", "py312", "py313", "py314"]

[tool.coverage.run]
omit=["octodns/cmds/*"]

[tool.isort]
profile = "black"
known_first_party="octodns"
line_length=80

[tool.pytest.ini_options]
filterwarnings = [
    'error',
    'ignore:.*DEPRECATED.*2.0',
]
pythonpath = "."
