[metadata]
name = octodns
description = "DNS as code - Tools for managing DNS across multiple providers"
long_description = file: README.md
version = 0.8.8
author = Ross McFarland
author_email = rwmcfa1@gmail.com
url = https://github.com/github/octodns
license = MIT
keywords = dns, providers
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
install_requires = 
    PyYaml==3.12
    azure-mgmt-dns==1.0.1
    azure-common==1.1.6
    boto3==1.4.6
    botocore==1.6.8
    dnspython==1.15.0
    docutils==0.14
    dyn==1.8.0
    futures==3.1.1
    google-cloud==0.27.0
    incf.countryutils==1.0
    ipaddress==1.0.18
    jmespath==0.9.3
    msrestazure==0.4.10
    natsort==5.0.3
    nsone==0.9.14
    ovh==0.4.7
    python-dateutil==2.6.1
    requests==2.13.0
    s3transfer==0.1.10
    six==1.10.0
packages = find:
include_package_data = True

[options.entry_points]
console_scripts = 
    octodns-compare = octodns.cmds.compare:main
    octodns-dump = octodns.cmds.dump:main
    octodns-report = octodns.cmds.report:main
    octodns-sync = octodns.cmds.sync:main
    octodns-validate = octodns.cmds.validate:main

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
    coverage
    mock
    nose
    pep8
    pyflakes
    requests_mock
    setuptools>=36.4.0
